Add asynchronous, promise

--- a/JavaScript/ES6/es6prac.html
+++ b/JavaScript/ES6/es6prac.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <button id="버튼">버튼</button>
+    <img id="test" src="https://codingapple1.github.io/kona.jpg" />
 
     <script src="./es6prac.js"></script>
+    <script type="module">
+      import {신체정보 as bodyInform} from "./es6prac.js";
+      console.log(bodyInform);
+    </script>
   </body>
 </html>
