Add async, await syntax

--- a/JavaScript/ES6/es6prac.html
+++ b/JavaScript/ES6/es6prac.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
     <button id="버튼">버튼</button>
@@ -13,7 +14,7 @@
     <script src="./es6prac.js"></script>
     <script type="module">
       import {신체정보 as bodyInform} from "./es6prac.js";
-      console.log(bodyInform);
+      // console.log(bodyInform);
     </script>
   </body>
 </html>
