--- a/TypeScript/prac/index.html
+++ b/TypeScript/prac/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
   </head>
   <body>
+    <h4 id="title">안녕하세요</h4>
+    <a href="https://www.naver.com" class="link">링크</a>
+    <button id="button">버튼</button>
+    <img
+      id="image"
+      src="https://images.unsplash.com/photo-1653750776723-4f7882017f5f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1362&q=80"
+    />
+
     <script src="./tsBasicSyntax.js"></script>
   </body>
 </html>
