--- a/TypeScript/Algorithm/Section_1/index.html
+++ b/TypeScript/Algorithm/Section_1/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./1.세수중최솟값.js"></script>
+    <script src="./3.연필개수.js"></script>
   </body>
 </html>
