--- a/Algorithm/Section_1/index.html
+++ b/Algorithm/Section_1/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./5.최솟값구하기.js"></script>
+    <script src="./6.홀수.js"></script>
   </body>
 </html>
