--- a/Algorithm/Section_1/index.html
+++ b/Algorithm/Section_1/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./8.일곱난쟁이.js"></script>
+    <script src="./9.A변환.js"></script>
   </body>
 </html>
