--- a/Algorithm/Section_1/index.html
+++ b/Algorithm/Section_1/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./10.문자찾기.js"></script>
+    <script src="./12.대문자로통일.js"></script>
   </body>
 </html>
