--- a/Algorithm/Section_1/index.html
+++ b/Algorithm/Section_1/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./14.가장긴문자열.js"></script>
+    <script src="./15.가운데문자출력.js"></script>
   </body>
 </html>
