--- a/Algorithm/Section_1/index.html
+++ b/Algorithm/Section_1/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./16.중복문자제거.js"></script>
+    <script src="./17.중복단어제거.js"></script>
   </body>
 </html>
