--- a/HangHae99/prev/front/index.html
+++ b/HangHae99/prev/front/index.html
@@ -16,19 +16,20 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./main.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
 
   <body>
     <div class="myTitle">
       <h1>내 생의 최고의 영화들</h1>
-      <button>영화 기록하기🔥</button>
+      <button onclick="openBox()">영화 기록하기🔥</button>
     </div>
-    <div class="myPost">
+    <div class="myPost" id="post-box">
       <div class="form-floating mb-3">
         <input
           type="email"
           class="form-control"
-          id="floatingInput"
+          id="url"
           placeholder="영화URL"
         />
         <label for="floatingInput">영화URL</label>
@@ -55,15 +56,16 @@
       </div>
       <div class="myBtn">
         <button type="button" class="btn btn-primary">기록하기</button>
-        <button type="button" class="btn btn-danger">닫기</button>
+        <button type="button" class="btn btn-danger" onclick="closeBox()">
+          닫기
+        </button>
       </div>
     </div>
     <div class="wrap">
-      <div class="row row-cols-1 row-cols-md-4 g-4"></div>
+      <div id="cards-box" class="row row-cols-1 row-cols-md-4 g-4"></div>
     </div>
 
     <script src="./main.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
