--- a/Algorithm/2_1,2차원_배열_탐색/index.html
+++ b/Algorithm/2_1,2차원_배열_탐색/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./02_보이는학생.js"></script>
+    <script src="./03_가위바위보.js"></script>
   </body>
 </html>
