--- a/Algorithm/2_1,2차원_배열_탐색/index.html
+++ b/Algorithm/2_1,2차원_배열_탐색/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./04_점수계산.js"></script>
+    <script src="./05_등수구하기.js"></script>
   </body>
 </html>
